# zed

./: Cargo.toml
crates/ai/src/: assistant.rs
crates/appearance/: Cargo.toml
crates/appearance/src/: appearance.rs  appearance_modal.rs  deploy_appearance.rs
crates/crdb/: demo_script.zmd  script.zmd
crates/editor/src/: editor.rs  editor_tests.rs
crates/editor2/src/: editor.rs  element.rs
crates/gpui/src/: app.rs  platform.rs  window.rs
crates/language/src/: buffer.rs  buffer_tests.rs  language.rs  syntax_map.rs
crates/multi_buffer/src/: multi_buffer.rs
crates/settings/src/: settings_store.rs
crates/theme/src/: theme.rs
crates/theme2/src/: default_colors.rs  one_themes.rs  theme2.rs
crates/ui2/src/: components.rs
crates/workspace2/src/: pane.rs  workspace2.rs
crates/zed/src/: languages.rs  zed.rs
crates/zed2/: Cargo.toml
crates/zed2/src/: zed2.rs
styles/: .eslintrc.js  package.json
styles/material-vite-ts/: package-lock.json  package.json
styles/material-vite-ts/src/: App.tsx  theme.tsx  tokens.ts
styles/src/: app.ts  buildLicenses.ts  build_licenses.ts  build_themes.ts  build_tokens.ts  build_types.ts  colorSchemes.ts  common.ts  static.ts  theme.ts  theme_old.ts.txt  types.ts
styles/src/component/: icon_button.ts
styles/src/element/: index.ts
styles/src/styleTree/: editor.ts  tabBar.ts
styles/src/style_tree/: app.ts  assistant.ts  channels_panel.ts  command_palette.ts  components.ts  contact_finder.ts  contact_list.ts  contact_notification.ts  contacts_popover.ts  context_menu.ts  copilot.ts  editor.ts  feedback.ts  hover_popover.ts  incoming_call_notification.ts  picker.ts  project_diagnostics.ts  project_panel.ts  project_shared_notification.ts  search.ts  shared_screen.ts  tab_bar.ts  (+9 more)
(+51 files in other folders)
