[package]
name = "appearance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "appearance"
path = "src/appearance.rs"

[features]
test-support = []
default = []
stories = ["dep:itertools", "dep:story"]

[dependencies]
client = { package = "client2", path = "../client2" }
db = { package = "db2", path = "../db2" }
editor = { package = "editor2", path = "../editor2" }
gpui = { package = "gpui2", path = "../gpui2" }
language = { package = "language2", path = "../language2" }
menu = { package = "menu2", path = "../menu2" }
project = { package = "project2", path = "../project2" }
regex.workspace = true
search = { package = "search2", path = "../search2" }
settings = { package = "settings2", path = "../settings2" }
theme = { package = "theme2", path = "../theme2" }
ui = { package = "ui2", path = "../ui2" }
util = { path = "../util" }
workspace = { package = "workspace2", path = "../workspace2"}

anyhow.workspace = true
chrono = "0.4"
futures.workspace = true
human_bytes = "0.4.1"
isahc.workspace = true
itertools = { version = "0.11.0", optional = true }
lazy_static.workspace = true
log.workspace = true
postage.workspace = true
rand = "0.8"
serde.workspace = true
serde_derive.workspace = true
smallvec.workspace = true
story = { path = "../story", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
sysinfo.workspace = true
tree-sitter-markdown = { git = "https://github.com/MDeiml/tree-sitter-markdown", rev = "330ecab87a3e3a7211ac69bbadc19eabecdb1cca" }
urlencoding = "2.1.2"

[dev-dependencies]
editor = { package = "editor2", path = "../editor2", features = ["test-support"] }
